--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,14 @@
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
     "@mui/styled-engine-sc": "^6.1.5",
+    "@mui/x-date-pickers": "^7.22.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^5.1.1",
     "ajv": "^8.17.1",
+    "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "html-to-react": "^1.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
