--- a/ImageOrFileServer/package.json
+++ b/ImageOrFileServer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "imageserver",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.8",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "pg": "^8.13.1",
-    "uuid": "^11.0.2"
+    "fs": "^0.0.1-security",
+    "mime": "^4.0.4",
+    "multer": "^1.4.5-lts.1"
   }
 }
