--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "ajv": "^8.17.1",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
-    "nodemon": "^3.1.7",
+    "form-data": "^4.0.1",
+    "fs": "^0.0.1-security",
     "html-to-react": "^1.7.0",
+    "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
